# chaos-playground

./: .gitignore  README.md  pyproject.toml
chaos_playground/: __init__.py
chaos_playground/double_pendulum/: physics.py  render.py  render_regimes.py
chaos_playground/kirkwood/: physics.py  render.py
chaos_playground/logistic/: physics.py  render.py
chaos_playground/lorenz/: physics.py  render.py
chaos_playground/shared/: integrator.py
tests/: test_integrator.py
