[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "chaos-playground"
version = "0.1.0"
description = "Visual reference animations of classic chaotic dynamical systems"
authors = [{name = "Dan Ringart"}]
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "matplotlib>=3.7",
    "pillow>=10.0",
]

[project.optional-dependencies]
dev = ["pytest>=7"]

[tool.setuptools.packages.find]
include = ["chaos_playground*"]
